--- a/src/app/modal-car/modal-car.component.html
+++ b/src/app/modal-car/modal-car.component.html
@@ -14,6 +14,9 @@
         id="brand"
         placeholder="Модель"
       >
+      <div class="formControlR" *ngIf="form.get('brand').invalid && form.get('brand').touched">
+        Это поле обязательно для заполнения!
+      </div>
     </div>
     <div class="form-group">
       <label for="year">Год выпуска</label>
@@ -23,6 +26,9 @@
         id="year"
         placeholder="Год выпуска"
       >
+      <div class="formControlR" *ngIf="form.get('year').invalid && form.get('year').touched">
+        Это поле обязательно для заполнения!
+      </div>
     </div>
   </form>
 </div>
